Issue #2801: fix bug in float.is_integer where ValueError could be incorrectly raised.  This is a backport of the Py3k fix in r62939.  (Should really have been fixed in the trunk first and svnmerged into py3k.)